fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,10 @@ h6,
 		color: var(--dark) !important;
 	}
 
+	.navbar-light .navbar-nav .nav-link.amy {
+		color: #ffffff !important;
+	}
+
 	.navbar-light .navbar-nav .nav-link::before {
 		display: none;
 	}
